# platform.core.multimedia.libmm-common

./: AUTHORS  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  mm-common.pc.in  mm_attrs.c  mm_attrs_private.c  mm_list_private.c  project.config
debian/: changelog  control  libmm-common-dev.install.in  libmm-common-internal-dev.install.in  rules
include/: SLP_MultimediaFW_PG.h  mm.h  mm_attrs.h  mm_attrs_private.h  mm_debug.h  mm_error.h  mm_list_private.h  mm_message.h  mm_types.h
packaging/: libmm-common.changes  libmm-common.spec
